# speculative-dec-measures

./: .gitignore  Assignment.md  README.md  analyze_speculative_theory.py  bench_code_completion.py  generate_speculative_plots.py  plot_results.py  pyproject.toml  requirements.txt  run_evaluation.py  run_humaneval_simple.py  run_performance.py  run_speculative_evaluation.py  run_speculative_performance.py  setup_llama_server.sh  test_llama_server.py
experiments/: __init__.py  base.py  evaluation.py  performance.py  result_saver.py
prompts/: custom_test.txt  prompt_template.txt
results/evaluation/: evaluation_analysis.json  evaluation_results.csv  evaluation_results.jsonl
results/evaluation_speculative_n50/: evaluation_speculative_n50_analysis.json  evaluation_speculative_n50_results.csv  evaluation_speculative_n50_results.jsonl
results/performance/: performance_max_tokens_20.csv  performance_max_tokens_40.csv  performance_max_tokens_60.csv
results/speculative_performance/: speculative_performance_draft_steps_10.csv  speculative_performance_draft_steps_100.csv  speculative_performance_draft_steps_200.csv  speculative_performance_draft_steps_25.csv  speculative_performance_draft_steps_5.csv  speculative_performance_draft_steps_50.csv  speculative_performance_draft_steps_512.csv
tests/: __init__.py  test_format_prompt.py
utils/: __init__.py  analyze_speculative_results.py  api.py  data_loading.py  evaluation_metrics.py  logging_config.py  measurements.py  plotting.py  prompt_formatting.py
